# qcow2-rs

./: CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: cache.rs  dev.rs  error.rs  helpers.rs  lib.rs  main.rs  meta.rs  ops.rs  sync_io.rs  tokio_io.rs  uring.rs  utils.rs
src/dev/: alloc.rs  cache.rs  check.rs  discard.rs  info.rs  mod.rs  read.rs  write.rs
src/meta/: addr.rs  header.rs  l1.rs  l2.rs  mod.rs  refcount.rs  table.rs
tests/: basic.rs  discard.rs  drop.rs  fallocate.rs  qcow2_util.rs  sync_io.rs  uring_io.rs
tests/common/: mod.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
