[package]
name = "qcow2-rs"
version = "0.1.0"
edition = "2021"
description = "A library for read/write qcow2 image in async/await"
authors = ["Ming Lei <tom.leiming@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ming1/qcow2-rs.git"
license = "MIT OR Apache-2.0"
keywords = ["io_uring", "qcow2", "qemu", "disk", "async"]
categories = [ "asynchronous", "filesystem" ]

publish = false

[[bin]]
name = "qcow2"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
time = "0.3"
fastrand = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
clap_derive = "4.3"
clap-num = "1.0.2"
libc = "0.2"
byteorder = "1.5"
async-trait = "0.1"
futures-locks = "0.7"
tokio = { version = "1.17", features = ["full"] }
nix = "0.26.2"
tokio-uring = "0.4"
async-recursion = "1.0.5"
miniz_oxide = { version = "0.6.2", features = ["std"] }
futures = "0.3.29"
log = {version = "0.4", features = ["release_max_level_off"]}
env_logger = "0.9"
rustversion = "1.0.14"

[dev-dependencies]
tempfile = "3.6.0"
crypto-hash = "0.3"
shlex = "1.2.0"
rand = "0.8"
